// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component should have helper classnames 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="has-background-success"
    >
      <p>
        Default
      </p>
      <p>
        Container
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container component should render 1`] = `
<DocumentFragment>
  <div
    class="container"
  />
</DocumentFragment>
`;
